# stratos-cli

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
.github/assets/: banner.txt
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  themes.md
stratos/: __init__.py  __main__.py  cli.py
stratos/assets/: menus.json  themes.json
stratos/core/: agent.py  engine.py  pool.py  sandbox.py
stratos/ui/: dashboard.py
stratos/ui/components/: banner.py  core.py  panels.py
stratos/ui/controllers/: execution_controller.py  launch_controller.py
stratos/ui/views/: execution_view.py  launch_view.py
stratos/utils/: config.py  list_models.py  logger.py
tests/: test_basic.py  test_config.py  test_logger.py  test_pool.py  test_sandbox.py
