[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratos-core"
dynamic = ["version", "description", "dependencies", "authors"]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.scripts]
stratos = "stratos.cli:main_entry"

[tool.setuptools]
packages = { find = { exclude = ["tests*", "docs*"] } }

[tool.setuptools.package-data]
stratos = ["assets/*"]
